[build-system]
requires = ['setuptools>=62.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'astero_sdb'
version = '0.1.1'
description = 'Tools for asteroseismology of sdB stars using MESA and GYRE models'
readme = 'README.md'
authors = [{ name = 'Jakub Ostrowski', email = 'cespenar1@gmail.com' }]
license = { file = 'LICENSE' }
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]
keywords = [
    'astronomy',
    'astrophysics',
    'stellar-astrophysics',
    'stellar-evolution',
]
dependencies = [
    'cycler',
    'fonttools',
    'kiwisolver',
    'matplotlib',
    'mesa-reader @ git+https://github.com/wmwolf/py_mesa_reader.git',
    'numpy',
    'packaging',
    'pandas',
    'Pillow',
    'pyparsing',
    'python-dateutil',
    'pytz',
    'six',
    'SQLAlchemy',
    'tqdm',
]
requires-python = '>=3.9'

[project.urls]
Homepage = 'https://github.com/cespenar/astero_sdb'
